WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
100046
[V8] ASSERT that removeAllDOMObjects() is called only on worker threads
https://bugs.webkit.org/show_bug.cgi?id=100046
Summary
[V8] ASSERT that removeAllDOMObjects() is called only on worker threads
Adam Barth
Reported
2012-10-22 16:06:16 PDT
[V8] ASSERT that removeAllDOMObjects() is called only on worker threads
Attachments
Patch
(2.10 KB, patch)
2012-10-22 16:07 PDT
,
Adam Barth
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2012-10-22 16:07:04 PDT
Created
attachment 170013
[details]
Patch
Eric Seidel (no email)
Comment 2
2012-10-22 16:07:52 PDT
Comment on
attachment 170013
[details]
Patch OK.
WebKit Review Bot
Comment 3
2012-10-22 16:33:00 PDT
Comment on
attachment 170013
[details]
Patch Clearing flags on attachment: 170013 Committed
r132156
: <
http://trac.webkit.org/changeset/132156
>
WebKit Review Bot
Comment 4
2012-10-22 16:33:03 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug