[V8] ASSERT that removeAllDOMObjects() is called only on worker threads https://bugs.webkit.org/show_bug.cgi?id=100046

Reviewed by Eric Seidel.

This function is called only on worker threads. We should ASSERT that
fact and remove the dead code that tries to handle the main thread
case.

* bindings/v8/V8DOMMap.cpp:
(WebCore::removeAllDOMObjects):


Canonical link: https://commits.webkit.org/118076@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132156 268f45cc-cd09-0410-ab3c-d52691b4dbfc